# homelab-k8s-infra

./: CLAUDE.md  LICENSE  README.md  sonar-project.properties
am-forgejo-bridge/: .dockerignore  Dockerfile  pyproject.toml
am-forgejo-bridge/am_forgejo_bridge/: __init__.py  bridge.py  forgejo.py  server.py
am-forgejo-bridge/tests/: test_bridge.py
bootstrap/: 00-prerequisites.md  01-k3d-cluster.yaml  02-forgejo-install.md  03-argocd-install.md  04-root-app.yaml  05-ollama-windows.md
charts/argocd/: values.yaml
charts/cnpg-operator/: values.yaml
charts/forgejo/: values.yaml
charts/monitoring/: values.yaml
charts/sealed-secrets/: values.yaml
docs/: architecture.md  backup.md  iso-quality-framework.md  quality-model.md  scheduled-jobs.md
quality-agent/: .gitignore  Dockerfile  README.md  pyproject.toml
quality-agent/contexts/: home-monitoring-app.yaml
quality-agent/policies/: default.yaml
quality-agent/quality_agent/: __init__.py  __main__.py  cli.py  config.py  models.py  util.py
quality-agent/quality_agent/analysis/: __init__.py  rules.py
quality-agent/quality_agent/collectors/: __init__.py  forgejo.py  kubelinter.py  macaron.py  ollama.py  sonarqube.py  trivy.py
quality-agent/quality_agent/report/: __init__.py  postgres.py  render.py  schema.sql
quality-agent/quality_agent/scoring/: __init__.py  normalize.py  score.py
quality-agent/tests/: test_forgejo.py  test_kubelinter.py  test_macaron.py  test_ollama.py  test_postgres.py  test_scoring.py  test_sonarqube.py
secrets/: README.md
tools/: publish-public-mirror.ps1
(+47 files in other folders)
